# amalitech-de-dem06

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
dags/: config.py  flight_price.py  flight_price_dag.py  schemas.py
dags/dbt_flights/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
dags/dbt_flights/models/marts/: schema.yml
dags/dbt_flights/models/marts/dimensions/: dim_aircraft.sql  dim_booking_profile.sql  dim_date.sql  dim_route.sql
dags/dbt_flights/models/marts/facts/: fact_flight_fares.sql
dags/dbt_flights/models/marts/gold/: mart_airline_performance.sql  mart_booking_window_analysis.sql  mart_popular_routes.sql  mart_seasonal_variation.sql  schema.yml
dags/dbt_flights/models/staging/: invalid_flights.sql  sources.yml  stg_valid_flights.sql
dags/dbt_flights/tests/: assert_arrival_after_departure.sql
dags/tasks/: extract.py  transfer.py
init-sql/: mysql_init.sql  postgres_init.sql
